--- a/pipelines/release-elect-regression.yml
+++ b/pipelines/release-elect-regression.yml
@@ -146,207 +146,208 @@ jobs:
 
 - name: start-pipeline
   serial: true
+  serial_group: ["locking"]
   plan:
-  - get: pipeline-lock
-  - put: pipeline-lock
-    params:
-      claim: pipeline
+    - get: pipeline-lock
+    - put: pipeline-lock
+      params:
+        claim: pipeline
 
 - name: loggregator-elect-deploy
   serial: true
   serial_groups: ["loggregator-elect"]
   plan:
-  - aggregate:
-    - get: pipeline-lock
-      passed: ["start-pipeline"]
-      trigger: true
-    - get: bbl-state
-      resource: deployments-loggregator
-    - get: cf-deployment
-    - get: cf-deployment-concourse-tasks
-    - get: release
-      resource: loggregator-release-elect
-    - get: vars-store
-      resource: deployments-loggregator
-  - task: upload-stemcell
-    file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
-    params:
-      BBL_STATE_DIR: gcp/loggregator-elect-bbl
-  - task: copy-ops-files
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source: { repository: ubuntu }
-      inputs:
-      - name: bbl-state
-      - name: cf-deployment
-      outputs:
-      - name: ops-files
-      run:
-        path: /bin/bash
-        args:
-        - "-c"
-        - |
-          #!/bin/bash
-          set -ex
+    - aggregate:
+      - get: pipeline-lock
+        passed: ["start-pipeline"]
+        trigger: true
+      - get: bbl-state
+        resource: deployments-loggregator
+      - get: cf-deployment
+      - get: cf-deployment-concourse-tasks
+      - get: release
+        resource: loggregator-release-elect
+      - get: vars-store
+        resource: deployments-loggregator
+    - task: upload-stemcell
+      file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
+      params:
+        BBL_STATE_DIR: gcp/loggregator-elect-bbl
+    - task: copy-ops-files
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source: { repository: ubuntu }
+        inputs:
+        - name: bbl-state
+        - name: cf-deployment
+        outputs:
+        - name: ops-files
+        run:
+          path: /bin/bash
+          args:
+          - "-c"
+          - |
+            #!/bin/bash
+            set -ex
 
-          cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
-          cp bbl-state/gcp/loggregator-elect-bbl/ops-files/*.yml ops-files/
+            cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
+            cp bbl-state/gcp/loggregator-elect-bbl/ops-files/*.yml ops-files/
 
-  - task: cf-deploy
-    file: cf-deployment-concourse-tasks/bosh-deploy-with-created-release/task.yml
-    params:
-      BBL_STATE_DIR: gcp/loggregator-elect-bbl
-      SYSTEM_DOMAIN: loggregator-elect.cf-app.com
-      VARS_STORE_FILE: gcp/loggregator-elect-bbl/deployment-vars.yml
-      OPS_FILES: "clients.yml use-4-azs-for-router.yml"
-  - put: deployments-loggregator-with-changes
-    params:
-      repository: updated-vars-store
-      rebase: true
-
+    - task: cf-deploy
+      file: cf-deployment-concourse-tasks/bosh-deploy-with-created-release/task.yml
+      params:
+        BBL_STATE_DIR: gcp/loggregator-elect-bbl
+        SYSTEM_DOMAIN: loggregator-elect.cf-app.com
+        VARS_STORE_FILE: gcp/loggregator-elect-bbl/deployment-vars.yml
+        OPS_FILES: "clients.yml use-4-azs-for-router.yml"
+    - put: deployments-loggregator-with-changes
+      params:
+        repository: updated-vars-store
+        rebase: true
 
 - name: loggregator-latest-deploy
   serial: true
   serial_groups: ["loggregator-latest"]
   plan:
-  - aggregate:
-    - get: pipeline-lock
-      passed: ["start-pipeline"]
-      trigger: true
-    - get: bbl-state
-      resource: deployments-loggregator
-    - get: cf-deployment
-    - get: cf-deployment-concourse-tasks
-    - get: vars-store
-      resource: deployments-loggregator
-    - get: release
-      resource: loggregator-latest
-  - task: upload-stemcell
-    file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
-    params:
-      BBL_STATE_DIR: gcp/loggregator-latest-bbl
-  - task: copy-ops-files
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source: { repository: ubuntu }
-      inputs:
-      - name: bbl-state
-      - name: cf-deployment
-      - name: release
-      outputs:
-      - name: ops-files
-      run:
-        path: /bin/bash
-        args:
-        - "-c"
-        - |
-          #!/bin/bash
-          set -ex
+    - aggregate:
+      - get: pipeline-lock
+        passed: ["start-pipeline"]
+        trigger: true
+      - get: bbl-state
+        resource: deployments-loggregator
+      - get: cf-deployment
+      - get: cf-deployment-concourse-tasks
+      - get: vars-store
+        resource: deployments-loggregator
+      - get: release
+        resource: loggregator-latest
+    - task: upload-stemcell
+      file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
+      params:
+        BBL_STATE_DIR: gcp/loggregator-latest-bbl
+    - task: copy-ops-files
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source: { repository: ubuntu }
+        inputs:
+        - name: bbl-state
+        - name: cf-deployment
+        - name: release
+        outputs:
+        - name: ops-files
+        run:
+          path: /bin/bash
+          args:
+          - "-c"
+          - |
+            #!/bin/bash
+            set -ex
 
-          cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
-          cp bbl-state/gcp/loggregator-latest-bbl/ops-files/*.yml ops-files/
+            cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
+            cp bbl-state/gcp/loggregator-latest-bbl/ops-files/*.yml ops-files/
 
-          version=$(cat release/version)
-          sha=$(cat release/sha1)
+            version=$(cat release/version)
+            sha=$(cat release/sha1)
 
-          echo <<EOT >> ops-files/loggregator-version.yml
-          - type: replace
-            path: /releases/name=loggregator
-            value:
-              name: loggregator
-              url: https://bosh.io/d/github.com/cloudfoundry/loggregator?v=$version
-              version: "$version"
-              sha1: "$sha"
-          EOT
-  - task: cf-deploy
-    file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
-    params:
-      BBL_STATE_DIR: gcp/loggregator-latest-bbl
-      SYSTEM_DOMAIN: loggregator-latest.cf-app.com
-      VARS_STORE_FILE: gcp/loggregator-latest-bbl/deployment-vars.yml
-      OPS_FILES: "clients.yml use-4-azs-for-router.yml loggregator-version.yml"
-  - put: deployments-loggregator-with-changes
-    params:
-      repository: updated-vars-store
-      rebase: true
+            echo <<EOT >> ops-files/loggregator-version.yml
+            - type: replace
+              path: /releases/name=loggregator
+              value:
+                name: loggregator
+                url: https://bosh.io/d/github.com/cloudfoundry/loggregator?v=$version
+                version: "$version"
+                sha1: "$sha"
+            EOT
+    - task: cf-deploy
+      file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
+      params:
+        BBL_STATE_DIR: gcp/loggregator-latest-bbl
+        SYSTEM_DOMAIN: loggregator-latest.cf-app.com
+        VARS_STORE_FILE: gcp/loggregator-latest-bbl/deployment-vars.yml
+        OPS_FILES: "clients.yml use-4-azs-for-router.yml loggregator-version.yml"
+    - put: deployments-loggregator-with-changes
+      params:
+        repository: updated-vars-store
+        rebase: true
 
 - name: cf-setup
   serial: true
   serial_groups: ["loggregator-elect", "loggregator-latest"]
   plan:
-  - aggregate:
-    - get: pipeline-lock
-      passed: ["loggregator-latest-deploy", "loggregator-elect-deploy"]
-      trigger: true
-    - get: vars-store
-      resource: deployments-loggregator-with-changes
-    - get: loggregator
-      resource: loggregator-develop
-    - get: release-elect
-      passed:
-        - loggregator-elect-deploy
-      resource: loggregator-release-elect
-    - get: release-latest
-      passed:
-        - loggregator-latest-deploy
-      resource: loggregator-latest
-    - get: loggregator-ci
-  - aggregate:
-    - task: setup-loggregator-elect
-      file: loggregator-ci/tasks/release-elect-regression/setup-cf.yml
-      params:
-        SYSTEM_DOMAIN: loggregator-elect.cf-app.com
-        VARS_STORE_FILE: gcp/loggregator-elect-bbl/deployment-vars.yml
-        ORG: cf-lamb
-        SPACE: development
-    - task: setup-loggregator-latest
-      file: loggregator-ci/tasks/release-elect-regression/setup-cf.yml
-      params:
-        SYSTEM_DOMAIN: loggregator-latest.cf-app.com
-        VARS_STORE_FILE: gcp/loggregator-latest-bbl/deployment-vars.yml
-        ORG: cf-lamb
-        SPACE: development
+    - aggregate:
+      - get: pipeline-lock
+        passed: ["loggregator-latest-deploy", "loggregator-elect-deploy"]
+        trigger: true
+      - get: vars-store
+        resource: deployments-loggregator-with-changes
+      - get: loggregator
+        resource: loggregator-develop
+      - get: release-elect
+        passed:
+          - loggregator-elect-deploy
+        resource: loggregator-release-elect
+      - get: release-latest
+        passed:
+          - loggregator-latest-deploy
+        resource: loggregator-latest
+      - get: loggregator-ci
+    - aggregate:
+      - task: setup-loggregator-elect
+        file: loggregator-ci/tasks/release-elect-regression/setup-cf.yml
+        params:
+          SYSTEM_DOMAIN: loggregator-elect.cf-app.com
+          VARS_STORE_FILE: gcp/loggregator-elect-bbl/deployment-vars.yml
+          ORG: cf-lamb
+          SPACE: development
+      - task: setup-loggregator-latest
+        file: loggregator-ci/tasks/release-elect-regression/setup-cf.yml
+        params:
+          SYSTEM_DOMAIN: loggregator-latest.cf-app.com
+          VARS_STORE_FILE: gcp/loggregator-latest-bbl/deployment-vars.yml
+          ORG: cf-lamb
+          SPACE: development
 
 - name: setup-datadog
   serial: true
   serial_groups: ["loggregator-elect", "loggregator-latest"]
   plan:
-  - aggregate:
-    - get: pipeline-lock
-      passed: ["cf-setup"]
-      trigger: true
-    - get: release-latest
-      resource: loggregator-latest
-      passed:
-      - cf-setup
-    - get: release-elect
-      resource: loggregator-release-elect
-      passed:
-      - cf-setup
-    - get: loggregator-ci
-  - task: setup-dashboard
-    file: loggregator-ci/tasks/release-elect-regression/setup-datadog-dashboard.yml
-    params:
-      DATADOG_API_KEY: {{datadog-dev-api-key}}
-      DATADOG_APP_KEY: {{datadog-dev-app-key}}
-      LATEST_SYSTEM_DOMAIN: loggregator-latest.cf-app.com
-      ELECT_SYSTEM_DOMAIN: loggregator-elect.cf-app.com
-  - put: pipeline-lock
-    params:
-      release: pipeline-lock
+    - aggregate:
+      - get: pipeline-lock
+        passed: ["cf-setup"]
+        trigger: true
+      - get: release-latest
+        resource: loggregator-latest
+        passed:
+        - cf-setup
+      - get: release-elect
+        resource: loggregator-release-elect
+        passed:
+        - cf-setup
+      - get: loggregator-ci
+    - task: setup-dashboard
+      file: loggregator-ci/tasks/release-elect-regression/setup-datadog-dashboard.yml
+      params:
+        DATADOG_API_KEY: {{datadog-dev-api-key}}
+        DATADOG_APP_KEY: {{datadog-dev-app-key}}
+        LATEST_SYSTEM_DOMAIN: loggregator-latest.cf-app.com
+        ELECT_SYSTEM_DOMAIN: loggregator-elect.cf-app.com
+    - put: pipeline-lock
+      params:
+        release: pipeline-lock
 
 - name: smoke-tests
   serial: true
+  serial_group: ["locking"]
   plan:
+    - get: pipeline-lock
+    - put: pipeline-lock
+      params:
+        claim: "pipeline"
     - aggregate:
-      - get: pipeline-lock
-      - put: pipeline-lock
-        params:
-          claim: "pipeline"
       - get: release-elect
         resource: loggregator-release-elect
         passed:
@@ -432,6 +433,6 @@ jobs:
             PASSWORD: {{loggregator-latest-password}}
             DATADOG_API_KEY: {{datadog-dev-api-key}}
             SKIP_SSL_VALIDATION: true
-      - put: pipeline-lock
-        params:
-          release: release-elect-regression
+    - put: pipeline-lock
+      params:
+        release: pipeline-lock
