--- a/pipelines/loggregator/science.yml
+++ b/pipelines/loggregator/science.yml
@@ -4,8 +4,9 @@ groups:
   - start-pipeline
   - loggregator-latest-deploy
   - loggregator-elect-deploy
+  - loggregator-latest-v2-deploy
+  - loggregator-elect-v2-deploy
   - setup
-  - setup-datadog
   - smoke-tests
 - name: director-lifecycle
   jobs:
@@ -109,6 +110,15 @@ resources:
       uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks
       branch: v3.1
 
+  # cf-deployment-concourse-tasks v3.1 has an issue where it fails to update
+  # the load balancers on GCP. This is a temproary work around for the v2
+  # testing.
+  - name: cf-deployment-concourse-tasks-v2
+    type: git
+    source:
+      uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks
+      branch: v3.13
+
   - name: loggregator-ci
     type: git
     source:
@@ -142,10 +152,8 @@ jobs:
 - name: loggregator-elect-bbl-create
   plan:
   - get: cf-deployment-concourse-tasks
-    trigger: false
   - get: bbl-state
     resource: deployments-loggregator
-    trigger: false
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
     params:
@@ -166,10 +174,8 @@ jobs:
 - name: loggregator-elect-bbl-destroy
   plan:
   - get: cf-deployment-concourse-tasks
-    trigger: false
   - get: bbl-state
     resource: deployments-loggregator
-    trigger: false
   - task: bbl-destroy
     file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
     params:
@@ -182,10 +188,8 @@ jobs:
 - name: loggregator-latest-bbl-create
   plan:
   - get: cf-deployment-concourse-tasks
-    trigger: false
   - get: bbl-state
     resource: deployments-loggregator
-    trigger: false
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
     params:
@@ -206,10 +210,8 @@ jobs:
 - name: loggregator-latest-bbl-destroy
   plan:
   - get: cf-deployment-concourse-tasks
-    trigger: false
   - get: bbl-state
     resource: deployments-loggregator
-    trigger: false
   - task: bbl-destroy
     file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
     params:
@@ -222,10 +224,9 @@ jobs:
 - name: loggregator-elect-v2-bbl-create
   plan:
   - get: cf-deployment-concourse-tasks
-    trigger: false
+    resource: cf-deployment-concourse-tasks-v2
   - get: bbl-state
     resource: deployments-loggregator
-    trigger: false
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
     params:
@@ -246,10 +247,9 @@ jobs:
 - name: loggregator-elect-v2-bbl-destroy
   plan:
   - get: cf-deployment-concourse-tasks
-    trigger: false
+    resource: cf-deployment-concourse-tasks-v2
   - get: bbl-state
     resource: deployments-loggregator
-    trigger: false
   - task: bbl-destroy
     file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
     params:
@@ -262,10 +262,9 @@ jobs:
 - name: loggregator-latest-v2-bbl-create
   plan:
   - get: cf-deployment-concourse-tasks
-    trigger: false
+    resource: cf-deployment-concourse-tasks-v2
   - get: bbl-state
     resource: deployments-loggregator
-    trigger: false
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
     params:
@@ -286,10 +285,9 @@ jobs:
 - name: loggregator-latest-v2-bbl-destroy
   plan:
   - get: cf-deployment-concourse-tasks
-    trigger: false
+    resource: cf-deployment-concourse-tasks-v2
   - get: bbl-state
     resource: deployments-loggregator
-    trigger: false
   - task: bbl-destroy
     file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
     params:
@@ -415,6 +413,134 @@ jobs:
                   --vars-file "$bbl_dir/deployment-vars.yml" \
                   --vars-file "$bbl_dir/turbulence-vars.yml" \
                   -v "system_domain=loggregator-elect.cf-app.com" \
+                  "$ss_dir/manifests/scalable-syslog.yml"
+
+                pushd updated-vars-store
+                  git config user.email "cf-loggregator@pivotal.io"
+                  git config user.name "Loggregator CI"
+                  git add . --all
+                  git commit -m "Updated scalable syslog deployment vars
+
+                  [ci-skip]" || true
+                popd
+
+                rsync -ac updated-vars-store/ updated-deployments-loggregator
+      - put: deployments-loggregator-with-changes
+        params:
+          repository: updated-deployments-loggregator
+          rebase: true
+      on_failure: &slack-failure-alert
+        put: slack-alert
+        params:
+          text: |
+            The `science` pipeline has failed. Please resolve any issues and ensure the pipeline lock was released. Check it out at:
+            $ATC_EXTERNAL_URL/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+
+- name: loggregator-elect-v2-deploy
+  serial: true
+  serial_groups: ["loggregator-elect-v2"]
+  plan:
+    - aggregate:
+      - get: pipeline-lock
+        passed: ["start-pipeline"]
+        trigger: true
+      - get: bbl-state
+        resource: deployments-loggregator
+      - get: cf-deployment
+      - get: cf-deployment-concourse-tasks
+        resource: cf-deployment-concourse-tasks-v2
+      - get: release
+        resource: loggregator-release-elect
+      - get: vars-store
+        resource: deployments-loggregator
+      - get: vars-files
+        resource: deployments-loggregator
+      - get: consul-release
+      - get: scalable-syslog-release-elect
+    - do:
+      - task: upload-stemcell
+        file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
+        params:
+          BBL_STATE_DIR: gcp/science/loggregator-elect-v2
+      - task: copy-ops-files
+        config:
+          platform: linux
+          image_resource:
+            type: docker-image
+            source: { repository: ubuntu }
+          inputs:
+          - name: bbl-state
+          - name: cf-deployment
+          outputs:
+          - name: ops-files
+          run:
+            path: /bin/bash
+            args:
+            - "-c"
+            - |
+              #!/bin/bash
+              set -ex
+
+              cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
+              cp cf-deployment/operations/tcp-routing-gcp.yml ops-files/
+              cp cf-deployment/operations/experimental/enable-rlp.yml ops-files/
+              cp cf-deployment/operations/experimental/enable-loggregator-v2-diego-cell.yml ops-files/
+              cp bbl-state/gcp/science/loggregator-elect-v2/ops-files/*.yml ops-files/
+
+      - task: cf-deploy
+        file: cf-deployment-concourse-tasks/bosh-deploy-with-created-release/task.yml
+        params:
+          BBL_STATE_DIR: gcp/science/loggregator-elect-v2
+          SYSTEM_DOMAIN: loggregator-elect-v2.cf-app.com
+          VARS_STORE_FILE: gcp/science/loggregator-elect-v2/deployment-vars.yml
+          OPS_FILES: "clients.yml use-4-azs-for-router.yml tcp-routing-gcp.yml enable-rlp.yml metron-health.yml enable-loggregator-v2-diego-cell.yml"
+      - task: deploy-scalable-syslog
+        config:
+          image_resource:
+            type: docker-image
+            source:
+              repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
+          platform: linux
+          inputs:
+          - name: scalable-syslog-release-elect
+          - name: consul-release
+          - name: updated-vars-store
+          outputs:
+          - name: updated-deployments-loggregator
+          params:
+          run:
+            path: bash
+            args:
+              - -c
+              - |
+                #!/bin/bash
+                set -eux
+
+                pushd updated-vars-store/gcp/science/loggregator-elect-v2
+                  export BOSH_CLIENT=`bbl director-username`
+                  export BOSH_CLIENT_SECRET=`bbl director-password`
+                  export BOSH_CA_CERT=`bbl director-ca-cert`
+                  export BOSH_ENVIRONMENT=`bbl director-address`
+                popd
+
+                for release in $(find consul-release -name '*.tgz'); do
+                  bosh upload-release $release
+                done
+
+                pushd scalable-syslog-release-elect
+                  bosh create-release --force
+                  bosh upload-release --rebase
+                popd
+
+                ss_dir="$PWD/scalable-syslog-release-elect"
+                bbl_dir="updated-vars-store/gcp/science/loggregator-elect-v2"
+
+                bosh -n -d scalablesyslog deploy \
+                  --vars-store "$bbl_dir/scalablesyslog-vars.yml" \
+                  --ops-file "$ss_dir/manifests/cf-deployment-ops.yml" \
+                  --ops-file "$bbl_dir/ops-files/allow-insecure-syslog-drains.yml" \
+                  --vars-file "$bbl_dir/deployment-vars.yml" \
+                  -v "system_domain=loggregator-elect-v2.cf-app.com" \
                   "$ss_dir/manifests/scalable-syslog.yml"
 
                 pushd updated-vars-store
@@ -581,13 +707,156 @@ jobs:
           rebase: true
       on_failure: *slack-failure-alert
 
-- name: setup
+- name: loggregator-latest-v2-deploy
   serial: true
-  serial_groups: ["loggregator-elect", "loggregator-latest"]
+  serial_groups: ["loggregator-latest-v2"]
   plan:
     - aggregate:
       - get: pipeline-lock
-        passed: ["loggregator-latest-deploy", "loggregator-elect-deploy"]
+        passed: ["start-pipeline"]
+        trigger: true
+      - get: bbl-state
+        resource: deployments-loggregator
+      - get: cf-deployment
+      - get: cf-deployment-concourse-tasks
+        resource: cf-deployment-concourse-tasks-v2
+      - get: vars-store
+        resource: deployments-loggregator
+      - get: release
+        resource: loggregator-latest
+      - get: vars-files
+        resource: deployments-loggregator
+      - get: consul-release
+      - get: scalable-syslog-develop
+      - get: scalable-syslog-github-release
+    - do:
+      - task: upload-stemcell
+        file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
+        params:
+          BBL_STATE_DIR: gcp/science/loggregator-latest-v2
+      - task: copy-ops-files
+        config:
+          platform: linux
+          image_resource:
+            type: docker-image
+            source: { repository: ubuntu }
+          inputs:
+          - name: bbl-state
+          - name: cf-deployment
+          - name: release
+          outputs:
+          - name: ops-files
+          run:
+            path: /bin/bash
+            args:
+            - "-c"
+            - |
+              #!/bin/bash
+              set -ex
+
+              cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
+              cp cf-deployment/operations/tcp-routing-gcp.yml ops-files/
+              cp cf-deployment/operations/experimental/enable-rlp.yml ops-files/
+              cp cf-deployment/operations/experimental/enable-loggregator-v2-diego-cell.yml ops-files/
+              cp bbl-state/gcp/science/loggregator-latest-v2/ops-files/*.yml ops-files/
+
+              version=$(cat release/version)
+              sha=$(cat release/sha1)
+
+              cat <<EOT >> ops-files/loggregator-version.yml
+              - type: replace
+                path: /releases/name=loggregator
+                value:
+                  name: loggregator
+                  url: https://bosh.io/d/github.com/cloudfoundry/loggregator?v=$version
+                  version: "$version"
+                  sha1: "$sha"
+              EOT
+      - task: cf-deploy
+        file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
+        params:
+          BBL_STATE_DIR: gcp/science/loggregator-latest-v2
+          SYSTEM_DOMAIN: loggregator-latest-v2.cf-app.com
+          VARS_STORE_FILE: gcp/science/loggregator-latest-v2/deployment-vars.yml
+          OPS_FILES: "clients.yml use-4-azs-for-router.yml loggregator-version.yml tcp-routing-gcp.yml enable-rlp.yml metron-health.yml enable-loggregator-v2-diego-cell.yml"
+      - task: deploy-scalable-syslog
+        config:
+          image_resource:
+            type: docker-image
+            source:
+              repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
+          platform: linux
+          inputs:
+          - name: scalable-syslog-github-release
+          - name: scalable-syslog-develop
+          - name: consul-release
+          - name: updated-vars-store
+          outputs:
+          - name: updated-deployments-loggregator
+          params:
+          run:
+            path: bash
+            args:
+              - -c
+              - |
+                #!/bin/bash
+                set -eux
+
+                pushd updated-vars-store/gcp/science/loggregator-latest-v2
+                  export BOSH_CLIENT=`bbl director-username`
+                  export BOSH_CLIENT_SECRET=`bbl director-password`
+                  export BOSH_CA_CERT=`bbl director-ca-cert`
+                  export BOSH_ENVIRONMENT=`bbl director-address`
+                popd
+
+                for release in $(find consul-release -name '*.tgz'); do
+                  bosh upload-release $release
+                done
+
+                pushd scalable-syslog-github-release
+                  bosh upload-release *.tgz
+                popd
+
+                pushd scalable-syslog-develop
+                  tag=$(cat ../scalable-syslog-github-release/tag)
+                  git checkout $tag
+                popd
+
+                ss_dir="$PWD/scalable-syslog-develop"
+                bbl_dir="updated-vars-store/gcp/science/loggregator-latest-v2"
+
+                bosh -n -d scalablesyslog deploy \
+                  --vars-store "$bbl_dir/scalablesyslog-vars.yml" \
+                  --ops-file "$ss_dir/manifests/cf-deployment-ops.yml" \
+                  --ops-file "$bbl_dir/ops-files/allow-insecure-syslog-drains.yml" \
+                  --vars-file "$bbl_dir/deployment-vars.yml" \
+                  -v "system_domain=loggregator-latest-v2.cf-app.com" \
+                  "$ss_dir/manifests/scalable-syslog.yml"
+
+                pushd updated-vars-store
+                  git config user.email "cf-loggregator@pivotal.io"
+                  git config user.name "Loggregator CI"
+                  git add . --all
+                  git commit -m "Updated scalable syslog deployment vars
+
+                  [ci-skip]" || true
+                popd
+
+                rsync -ac updated-vars-store/ updated-deployments-loggregator
+      - put: deployments-loggregator-with-changes
+        params:
+          repository: updated-deployments-loggregator
+          rebase: true
+      on_failure: *slack-failure-alert
+
+
+- name: setup
+  serial: true
+  serial_groups: ["loggregator-elect", "loggregator-latest", "loggregator-elect-v2", "loggregator-latest-v2"]
+  plan:
+    - aggregate:
+      - get: pipeline-lock
+        passed: ["loggregator-latest-deploy", "loggregator-elect-deploy", "loggregator-latest-v2-deploy", "loggregator-elect-v2-deploy"]
         trigger: true
       - get: vars-store
         resource: deployments-loggregator-with-changes
@@ -618,6 +887,20 @@ jobs:
             VARS_STORE_FILE: gcp/science/loggregator-latest/deployment-vars.yml
             ORG: cf-lamb
             SPACE: development
+        - task: setup-loggregator-elect-v2
+          file: loggregator-ci/tasks/science/setup-cf.yml
+          params:
+            SYSTEM_DOMAIN: loggregator-elect-v2.cf-app.com
+            VARS_STORE_FILE: gcp/science/loggregator-elect-v2/deployment-vars.yml
+            ORG: cf-lamb
+            SPACE: development
+        - task: setup-loggregator-latest-v2
+          file: loggregator-ci/tasks/science/setup-cf.yml
+          params:
+            SYSTEM_DOMAIN: loggregator-latest-v2.cf-app.com
+            VARS_STORE_FILE: gcp/science/loggregator-latest-v2/deployment-vars.yml
+            ORG: cf-lamb
+            SPACE: development
         - task: setup-turbulence-loggregator-elect
           file: loggregator-ci/tasks/science/schedule-turbulence.yml
           params:
@@ -628,33 +911,13 @@ jobs:
           params:
             TURBULENCE_API_URL: https://130.211.157.150:6868
             VARS_FILE_PATH: "gcp/science/loggregator-latest/deployment-vars.yml"
-
-      timeout: 5m
-      on_failure: *slack-failure-alert
-
-- name: setup-datadog
-  serial: true
-  serial_groups: ["loggregator-elect", "loggregator-latest"]
-  plan:
-    - aggregate:
-      - get: pipeline-lock
-        passed: ["setup"]
-        trigger: true
-      - get: release-latest
-        resource: loggregator-latest
-        passed: ["setup"]
-      - get: release-elect
-        resource: loggregator-release-elect
-        passed: ["setup"]
-      - get: loggregator-ci
-    - do:
-      - task: setup-event
-        file: loggregator-ci/tasks/science/setup-datadog-event.yml
-        params:
-          DATADOG_API_KEY: {{datadog-dev-api-key}}
-          DATADOG_APP_KEY: {{datadog-dev-app-key}}
-          LATEST_SYSTEM_DOMAIN: loggregator-latest.cf-app.com
-          ELECT_SYSTEM_DOMAIN: loggregator-elect.cf-app.com
+        - task: setup-event
+          file: loggregator-ci/tasks/science/setup-datadog-event.yml
+          params:
+            DATADOG_API_KEY: {{datadog-dev-api-key}}
+            DATADOG_APP_KEY: {{datadog-dev-app-key}}
+            LATEST_SYSTEM_DOMAIN: loggregator-latest.cf-app.com
+            ELECT_SYSTEM_DOMAIN: loggregator-elect.cf-app.com
       - put: pipeline-lock
         params:
           release: pipeline-lock
@@ -675,12 +938,10 @@ jobs:
         resource: deployments-loggregator-with-changes
       - get: release-elect
         resource: loggregator-release-elect
-        passed:
-        - setup-datadog
+        passed: ["setup"]
       - get: release-latest
         resource: loggregator-latest
-        passed:
-        - setup-datadog
+        passed: ["setup"]
       - get: loggregator-ci
     - get: 5m
       trigger: true
